chore: Add packages from SDK

--- a/package.json
+++ b/package.json
@@ -19,8 +19,18 @@
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.17.12",
     "@babel/preset-typescript": "7.17.12",
+    "@storybook/addon-actions": "6.5.9",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/addon-interactions": "6.5.9",
+    "@storybook/addon-links": "6.5.9",
+    "@storybook/react": "6.5.9",
+    "@storybook/testing-library": "0.0.13",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.2.1",
     "@trivago/prettier-plugin-sort-imports": "3.2.0",
     "@types/cookie": "0.5.1",
+    "@types/jest": "28.1.3",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "5.29.0",
@@ -30,8 +40,13 @@
     "eslint": "8.18.0",
     "eslint-plugin-react": "7.30.0",
     "html-webpack-plugin": "5.5.0",
+    "husky": "8.0.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "prettier": "2.7.1",
     "style-loader": "3.3.1",
+    "ts-node": "10.8.1",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
     "typescript": "4.7.4",
     "webpack": "5.73.0",
     "webpack-cli": "4.10.0",
@@ -46,6 +61,7 @@
     "check-types": "tsc --noEmit",
     "dev": "MODE=development npx webpack serve",
     "lint": "eslint src",
+    "prepare": "husky install",
     "prettier": "prettier --write 'src/**/*.{css,ts,tsx}'",
     "test": "jest"
   },
