--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "classnames": "2.3.1",
     "cookie": "0.5.0",
     "formik": "2.2.9",
-    "portal-frontend-sdk": "1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
@@ -58,12 +57,16 @@
   "name": "portal-frontend",
   "scripts": {
     "build": "rm -rf dist && MODE=production webpack",
+    "build-storybook": "build-storybook",
     "check-types": "tsc --noEmit",
+    "check-types:watch": "tsc --noEmit --watch",
     "dev": "MODE=development npx webpack serve",
     "lint": "eslint src",
     "prepare": "husky install",
     "prettier": "prettier --write 'src/**/*.{css,ts,tsx}'",
-    "test": "jest"
+    "storybook": "start-storybook -p 7007",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "version": "1.0.0"
 }
