--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
     "paths": {
       "#components/*": ["src/components/*"],
       "#machines/*": ["src/machines/*"],
+      "#mocks/*": ["src/mocks/*"],
+      "#styles/*": ["src/styles/*"],
+      "#types/*": ["src/types/*"],
       "#utils/*": ["src/utils/*"],
       "#views/*": ["src/views/*"]
     },
