--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "prettier": "2.7.1",
+    "sass": "1.52.3",
+    "sass-loader": "13.0.0",
     "style-loader": "3.3.1",
     "ts-node": "10.8.1",
     "tsconfig-paths-webpack-plugin": "3.5.2",
