chore: Configure cypress, add profile editing test

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.17.12",
     "@babel/preset-typescript": "7.17.12",
+    "@faker-js/faker": "7.3.0",
     "@storybook/addon-actions": "6.5.9",
     "@storybook/addon-essentials": "6.5.9",
     "@storybook/addon-interactions": "6.5.9",
@@ -36,6 +37,7 @@
     "@typescript-eslint/parser": "5.29.0",
     "babel-loader": "8.2.5",
     "css-loader": "6.7.1",
+    "cypress": "10.2.0",
     "eslint": "8.18.0",
     "eslint-plugin-react": "7.30.0",
     "html-webpack-plugin": "5.5.0",
@@ -63,6 +65,7 @@
     "build-storybook": "build-storybook",
     "check-types": "tsc --noEmit",
     "check-types:watch": "tsc --noEmit --watch",
+    "cypress:open": "cypress open",
     "dev": "MODE=development npx webpack serve",
     "lint": "eslint src",
     "prepare": "husky install",
