--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,9 +32,10 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "suppressExcessPropertyErrors": false,
-    "target": "es6"
+    "target": "es6",
+    "types": ["@testing-library/jest-dom", "cypress", "jest"]
   },
   "exclude": ["node_modules", "dist"],
   "files": ["declarations.d.ts"],
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": ["cypress/**/*cy.ts", "src/**/*.ts", "src/**/*.tsx"]
 }
